# noclame

./: LICENSE  README.md  pyproject.toml
src/noclame/: __init__.py  noclame.py
